feat: Add Claude Vision Validator API for candlestick pattern validation
- Implemented API endpoints for validating candlestick patterns using Claude AI.
- Added functionality to fetch OHLCV data and validate patterns individually and in batches.
- Introduced a chart rendering service to visualize patterns for validation.
- Created data models for validation requests and responses.
- Implemented caching and history tracking for validation results.
- Added endpoints for retrieving validation history and statistics.
- Enhanced error handling and logging throughout the service.

--- a/docker/services/candlestick/requirements.txt
+++ b/docker/services/candlestick/requirements.txt
@@ -16,3 +16,6 @@ loguru>=0.7.0
 
 # Optional: NumPy for numerical operations
 numpy>=1.24.0
+
+# Chart rendering for Claude Vision validation
+matplotlib>=3.7.0
