--- a/docker/services/frontend/nginx.conf
+++ b/docker/services/frontend/nginx.conf
@@ -29,46 +29,29 @@ http {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
 
-    # Upstream services
-    upstream nhits-backend {
-        server trading-nhits:3002;
-    }
-
-    upstream llm-backend {
-        server trading-llm:3009;
-    }
-
+    # ==========================================================
+    # CRITICAL UPSTREAM SERVICES (must be running for nginx to start)
+    # ==========================================================
     upstream data-backend {
         server trading-data:3001;
-    }
-
-    upstream rag-backend {
-        server trading-rag:3008;
     }
 
     upstream easyinsight-backend {
         server 10.1.19.102:3000;
     }
 
-    upstream tcn-backend {
-        server trading-tcn:3003;
-    }
-
-    upstream tcn-train-backend {
-        server trading-tcn-train:3013;
-    }
-
-    upstream hmm-backend {
-        server trading-hmm:3004;
-    }
-
-    upstream embedder-backend {
-        server trading-embedder:3005;
-    }
+    # ==========================================================
+    # Note: All other services use dynamic resolver in location blocks
+    # to allow nginx to start even when containers are not running.
+    # This is important for maintenance and testing scenarios.
+    # ==========================================================
 
     server {
         listen 80;
         server_name localhost;
+
+        # Docker DNS resolver for dynamic upstream resolution
+        resolver 127.0.0.11 valid=10s ipv6=off;
 
         # Increase body size for large requests
         client_max_body_size 10M;
@@ -80,21 +63,24 @@ http {
         # Frontend - Static Files
         location / {
             try_files $uri $uri/ /index.html;
-            # Disable caching for HTML files to ensure latest version
-            location ~* \.html$ {
-                add_header Cache-Control "no-cache, no-store, must-revalidate";
-                add_header Pragma "no-cache";
-                add_header Expires "0";
-            }
+        }
+
+        # Disable caching for HTML files to ensure latest version
+        location ~* \.html$ {
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
         }
 
         # =====================================================
         # Direct Service Access (for Dashboard)
+        # All use dynamic resolver to tolerate missing containers
         # =====================================================
 
         # NHITS Service - Direct Access
         location /nhits/ {
-            proxy_pass http://nhits-backend/;
+            set $nhits_upstream trading-nhits:3002;
+            proxy_pass http://$nhits_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -104,12 +90,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             proxy_read_timeout 300s;
-            proxy_connect_timeout 75s;
+            proxy_connect_timeout 5s;
         }
 
         # LLM Service - Direct Access
         location /llm/ {
-            proxy_pass http://llm-backend/;
+            set $llm_upstream trading-llm:3009;
+            proxy_pass http://$llm_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -119,9 +106,10 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
-        # Data Service - Direct Access
+        # Data Service - Direct Access (critical service, uses static upstream)
         location /data/ {
             proxy_pass http://data-backend/;
             proxy_http_version 1.1;
@@ -137,7 +125,8 @@ http {
 
         # RAG Service - Direct Access
         location /rag/ {
-            proxy_pass http://rag-backend/;
+            set $rag_upstream trading-rag:3008;
+            proxy_pass http://$rag_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -147,11 +136,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
         # TCN-Pattern Service - Direct Access (Inference)
         location /tcn/ {
-            proxy_pass http://tcn-backend/;
+            set $tcn_upstream trading-tcn:3003;
+            proxy_pass http://$tcn_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -161,11 +152,14 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
         # TCN-Training Service - Direct Access (Training)
         location /tcn-train/ {
-            proxy_pass http://tcn-train-backend/;
+            set $tcn_train_upstream trading-tcn-train:3013;
+            rewrite ^/tcn-train/(.*)$ /$1 break;
+            proxy_pass http://$tcn_train_upstream;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -174,12 +168,81 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
-            proxy_read_timeout 600s;  # Long timeout for training requests
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 5s;
+        }
+
+        # Candlestick Pattern Service - Direct Access (Inference)
+        location /candlestick/ {
+            set $candlestick_upstream trading-candlestick:3006;
+            proxy_pass http://$candlestick_upstream/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
+        }
+
+        # Candlestick Training Service - Direct Access (Training)
+        location /candlestick-train/ {
+            set $candlestick_train_upstream trading-candlestick-train:3016;
+            rewrite ^/candlestick-train/(.*)$ /$1 break;
+            proxy_pass http://$candlestick_train_upstream;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 5s;
+        }
+
+        # NHITS-Training Service - Direct Access (Training)
+        location /nhits-train/ {
+            set $nhits_train_upstream trading-nhits-train:3012;
+            rewrite ^/nhits-train/(.*)$ /$1 break;
+            proxy_pass http://$nhits_train_upstream;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 5s;
+        }
+
+        # HMM-Training Service - Direct Access (Training)
+        location /hmm-train/ {
+            set $hmm_train_upstream trading-hmm-train:3014;
+            rewrite ^/hmm-train/(.*)$ /$1 break;
+            proxy_pass http://$hmm_train_upstream;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 5s;
         }
 
         # HMM-Regime Service - Direct Access
         location /hmm/ {
-            proxy_pass http://hmm-backend/;
+            set $hmm_upstream trading-hmm:3004;
+            proxy_pass http://$hmm_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -189,11 +252,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
         # Embedder Service - Direct Access
         location /embedder/ {
-            proxy_pass http://embedder-backend/;
+            set $embedder_upstream trading-embedder:3005;
+            proxy_pass http://$embedder_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -203,13 +268,14 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
-        # Watchdog Service - Direct Access (uses resolver for dynamic DNS)
+        # Watchdog Service - Direct Access
         location /watchdog/ {
-            resolver 127.0.0.11 valid=10s ipv6=off;
             set $watchdog_upstream trading-watchdog:3010;
-            proxy_pass http://$watchdog_upstream/;
+            rewrite ^/watchdog/(.*)$ /$1 break;
+            proxy_pass http://$watchdog_upstream;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -226,9 +292,10 @@ http {
         # API Gateway Routes
         # =====================================================
 
-        # NHITS Service (Port 3002)
+        # NHITS Service
         location /api/v1/forecast/ {
-            proxy_pass http://nhits-backend/api/v1/forecast/;
+            set $nhits_upstream trading-nhits:3002;
+            proxy_pass http://$nhits_upstream/api/v1/forecast/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -238,12 +305,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             proxy_read_timeout 300s;
-            proxy_connect_timeout 75s;
+            proxy_connect_timeout 5s;
         }
 
-        # LLM Service (Port 3004)
+        # LLM Service
         location /api/v1/analyze {
-            proxy_pass http://llm-backend/api/v1/analyze;
+            set $llm_upstream trading-llm:3009;
+            proxy_pass http://$llm_upstream/api/v1/analyze;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -253,83 +321,111 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
         location /api/v1/llm/ {
-            proxy_pass http://llm-backend/api/v1/llm/;
+            set $llm_upstream trading-llm:3009;
+            proxy_pass http://$llm_upstream/api/v1/llm/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
-        # RAG Service (Port 3003)
+        # RAG Service
         location /api/v1/rag/ {
-            proxy_pass http://rag-backend/api/v1/rag/;
+            set $rag_upstream trading-rag:3008;
+            proxy_pass http://$rag_upstream/api/v1/rag/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
-        # TCN-Pattern Service (Port 3005)
+        # TCN-Pattern Service (Port 3003)
         location /api/v1/patterns/ {
-            proxy_pass http://tcn-backend/api/v1/patterns/;
+            set $tcn_upstream trading-tcn:3003;
+            proxy_pass http://$tcn_upstream/api/v1/patterns/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
-        # HMM-Regime Service (Port 3006)
+        # HMM-Regime Service (Port 3004)
         location /api/v1/regime/ {
-            proxy_pass http://hmm-backend/api/v1/regime/;
+            set $hmm_upstream trading-hmm:3004;
+            proxy_pass http://$hmm_upstream/api/v1/regime/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
         location /api/v1/signals/ {
-            proxy_pass http://hmm-backend/api/v1/signals/;
+            set $hmm_upstream trading-hmm:3004;
+            proxy_pass http://$hmm_upstream/api/v1/signals/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
-        # Embedder Service (Port 3007)
+        # Embedder Service (Port 3005)
         location /api/v1/embeddings/ {
-            proxy_pass http://embedder-backend/api/v1/embeddings/;
+            set $embedder_upstream trading-embedder:3005;
+            proxy_pass http://$embedder_upstream/api/v1/embeddings/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
+        }
+
+        # Candlestick Pattern Service (Port 3006)
+        location /api/v1/candlestick/ {
+            set $candlestick_upstream trading-candlestick:3006;
+            proxy_pass http://$candlestick_upstream/api/v1/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
         location /api/v1/recommendation/ {
-            proxy_pass http://llm-backend/api/v1/recommendation/;
+            set $llm_upstream trading-llm:3009;
+            proxy_pass http://$llm_upstream/api/v1/recommendation/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
-        # Data Service (Port 3001)
+        # Data Service (critical - uses static upstream)
         location /api/v1/symbols {
             proxy_pass http://data-backend/api/v1/symbols;
             proxy_http_version 1.1;
@@ -399,8 +495,8 @@ http {
         # Health check endpoint
         location /health {
             access_log off;
-            default_type text/plain;
             return 200 "healthy\n";
+            add_header Content-Type text/plain;
         }
 
         # =====================================================
