--- a/docker/services/llm/Dockerfile
+++ b/docker/services/llm/Dockerfile
@@ -18,8 +18,21 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy source code
-COPY src/ /app/src/
+# Copy only the LLM app source code (avoid importing other services)
+# ARCHITEKTUR: LLM greift auf Daten NUR über Data Service (Port 3001) zu
+# twelvedata_service.py und yfinance_service.py werden NICHT kopiert - alle Datenzugriffe über HTTP
+COPY src/services/llm_app/ ./src/services/llm_app/
+COPY src/services/data_gateway_service.py ./src/services/
+COPY src/services/cache_service.py ./src/services/
+COPY src/config/ ./src/config/
+COPY src/utils/ ./src/utils/
+COPY src/shared/ ./src/shared/
+COPY src/version.py ./src/
+
+# Create empty __init__.py files to avoid import issues
+RUN touch ./src/__init__.py ./src/services/__init__.py
+
+# Copy .env for runtime configuration
 COPY .env /app/.env
 
 # Create directories for data (will be mounted as volumes)
