--- a/docker/services/watchdog/Dockerfile
+++ b/docker/services/watchdog/Dockerfile
@@ -21,8 +21,21 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Install additional dependencies for watchdog
 RUN pip install --no-cache-dir httpx python-telegram-bot
 
-# Copy source code
-COPY src/ /app/src/
+# Copy only the Watchdog app source code (avoid importing other services)
+# ARCHITEKTUR: Watchdog greift auf Daten NUR über Data Service (Port 3001) zu
+# twelvedata_service.py und yfinance_service.py werden NICHT kopiert - alle Datenzugriffe über HTTP
+COPY src/services/watchdog_app/ ./src/services/watchdog_app/
+COPY src/services/data_gateway_service.py ./src/services/
+COPY src/services/cache_service.py ./src/services/
+COPY src/config/ ./src/config/
+COPY src/utils/ ./src/utils/
+COPY src/shared/ ./src/shared/
+COPY src/version.py ./src/
+
+# Create empty __init__.py files to avoid import issues
+RUN touch ./src/__init__.py ./src/services/__init__.py
+
+# Copy .env for runtime configuration
 COPY .env /app/.env
 
 # Create directories for data (will be mounted as volumes)
