--- a/docker/services/frontend/nginx.conf
+++ b/docker/services/frontend/nginx.conf
@@ -239,6 +239,39 @@ http {
             proxy_connect_timeout 5s;
         }
 
+        # CNN-LSTM Multi-Task Service - Direct Access (Inference)
+        location /cnn-lstm/ {
+            set $cnn_lstm_upstream trading-cnn-lstm:3007;
+            proxy_pass http://$cnn_lstm_upstream/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
+        }
+
+        # CNN-LSTM Training Service - Direct Access (Training)
+        location /cnn-lstm-train/ {
+            set $cnn_lstm_train_upstream trading-cnn-lstm-train:3017;
+            rewrite ^/cnn-lstm-train/(.*)$ /$1 break;
+            proxy_pass http://$cnn_lstm_train_upstream;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 5s;
+        }
+
         # HMM-Regime Service - Direct Access
         location /hmm/ {
             set $hmm_upstream trading-hmm:3004;
@@ -404,6 +437,19 @@ http {
         location /api/v1/candlestick/ {
             set $candlestick_upstream trading-candlestick:3006;
             proxy_pass http://$candlestick_upstream/api/v1/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
+        }
+
+        # CNN-LSTM Multi-Task Service (Port 3007)
+        location /api/v1/predict/ {
+            set $cnn_lstm_upstream trading-cnn-lstm:3007;
+            proxy_pass http://$cnn_lstm_upstream/api/v1/predict/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
