--- a/docker/services/frontend/nginx.conf.template
+++ b/docker/services/frontend/nginx.conf.template
@@ -347,6 +347,25 @@ http {
             proxy_connect_timeout 5s;
         }
 
+        # Trading Workplace Service - Direct Access
+        # Setup aggregation and multi-signal scoring
+        location /workplace/ {
+            resolver 127.0.0.11 valid=10s ipv6=off;
+            set $workplace_upstream trading-workplace:3020;
+            rewrite ^/workplace/(.*)$ /$1 break;
+            proxy_pass http://$workplace_upstream;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
+        }
+
         # =====================================================
         # API Gateway Routes
         # =====================================================
