--- a/docker/services/tcn-train/requirements.txt
+++ b/docker/services/tcn-train/requirements.txt
@@ -15,6 +15,10 @@ aiohttp>=3.9.0
 torch>=2.0.0
 numpy>=1.24.0
 
+# Database (for data_repository dependencies)
+asyncpg>=0.29.0
+redis>=5.0.0
+
 # Utilities
 loguru>=0.7.0
 python-dotenv>=1.0.0
