--- a/docker/services/hmm/requirements.txt
+++ b/docker/services/hmm/requirements.txt
@@ -17,6 +17,10 @@ scikit-learn>=1.3.0
 numpy>=1.24.0
 pandas>=2.0.0
 
+# Database (for data_repository dependencies)
+asyncpg>=0.29.0
+redis>=5.0.0
+
 # Utilities
 joblib>=1.3.0
 loguru>=0.7.0
