--- a/docker-compose.microservices.yml
+++ b/docker-compose.microservices.yml
@@ -731,6 +731,11 @@ services:
       - AUTO_RETRAIN_ACCURACY_THRESHOLD=${CNN_LSTM_RETRAIN_ACCURACY_THRESHOLD:-60.0}
       - AUTO_RETRAIN_MIN_SAMPLES=${CNN_LSTM_RETRAIN_MIN_SAMPLES:-20}
       - AUTO_RETRAIN_COOLDOWN_HOURS=${CNN_LSTM_RETRAIN_COOLDOWN_HOURS:-24}
+      # Continuous Optimization (Drift Detection)
+      - CONTINUOUS_OPTIMIZATION_ENABLED=${CNN_LSTM_CONTINUOUS_ENABLED:-true}
+      - DRIFT_DETECTION_WINDOW=${CNN_LSTM_DRIFT_WINDOW:-20}
+      - DRIFT_THRESHOLD=${CNN_LSTM_DRIFT_THRESHOLD:-15.0}
+      - IMMEDIATE_RETRAIN_ON_DRIFT=${CNN_LSTM_IMMEDIATE_RETRAIN:-true}
       # Limit CPU threads
       - OMP_NUM_THREADS=2
       - MKL_NUM_THREADS=2
